--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
             <tbody>
             <tr >
-                <td   align="center">视频</td>
-                <td align="center"><a href="http://www.bilibili.com/" target="_blank"  >B站</a></td>
-                <td align="center"><a href="http://www.youku.com/" target="_blank"  >优酷</a></td>
-                <td align="center"><a href="http://www.iqiyi.com/" target="_blank"  >爱奇艺</a></td>
-                <td align="center"><a href="https://www.youtube.com/" target="_blank"  >YouTobe</a></td>
+                <td   align="center">其他工具</td>
+                <td align="center"><a href="https://txtpad.cn/snioer" target="_blank"  >文本派</a></td>
+                <td align="center"><a href="https://www.itdog.cn/" target="_blank"  >ITDog</a></td>
+                <td align="center"><a href="https://v.hi.sy/" target="_blank"  >ALLTUBE</a></td>
+                <td align="center"><a href="https://note.ms/" target="_blank"  >note.ms</a></td>
             </tr>
             <tbody>
             <tr>
@@ -166,9 +166,9 @@
             <tbody>
             <tr>
                 <td   align="center">阿里网盘</td>
-                <td align="center"><a href="https://share.snioer.ml/" target="_blank"  >ShareList Heroku</a></td>
+                <td align="center"><a href="https://alist.snioer.ml/" target="_blank"  >Alist Heroku</a></td>
                 <td align="center"><a href="https://sdc.rua.gay/" target="_blank"  >PanIndex V6</a></td>
-                <td align="center"><a href="https://pa.snioer.ml" target="_blank"  >-Alist Heroku</a></td>
+                <td align="center"><a href="https://alist.gcl.one" target="_blank"  >Alist2 Heroku</a></td>
                 <td align="center"><a href="http://www.chapaofan.com/" target="_blank"  >泡饭影视</a></td>
             </tr>
             </tbody>
