--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
             <tbody>
             <tr>
                 <td align="center">骨骼网盘</td>
-                <td align="center"><a href="https://gd.snioer.ml/" target="_blank" >常用骨骼盘</a></td>
-                <td align="center"><a href="https://gd2.snioer.ml/" target="_blank" >骨骼团队盘</a></td>
-                <td align="center"><a href="https://gds.snioer.ml/" target="_blank">GD Share</a></td>
-                <td align="center"><a href="https://gdi.snioer.ml/" target="_blank">GD Index</a></td>
+                <td align="center"><a href="https://gd.4ms.top/" target="_blank" >常用骨骼盘</a></td>
+                <td align="center"><a href="https://gd2.4ms.top/" target="_blank" >骨骼团队盘</a></td>
+                <td align="center"><a href="https://gds.4ms.top/" target="_blank">GD Share</a></td>
+                <td align="center"><a href="https://gdi.4ms.top/" target="_blank">GD Index</a></td>
             </tr>
             <tbody>
         <tr>
                 <td align="center">工具</td>
                 <td align="center"><a href="https://www.itdog.cn/" target="_blank" >测速跟踪</a></td>
-                <td align="center"><a href="https://bd.snioer.ml/" target="_blank"  >Pandownload</a></td>
-                <td align="center"><a href="https://down.snioer.ml/" target="_blank" >中转下载</a></td>
-                <td align="center"><a href="http://office.gcl.one/" target="_blank" >微软5T网盘申请</a></td>
+                <td align="center"><a href="https://bd.4ms.top/" target="_blank"  >Pandownload</a></td>
+                <td align="center"><a href="https://down.4ms.top/" target="_blank" >中转下载</a></td>
+                <td align="center"><a href="http://office.4ms.top/" target="_blank" >微软5T网盘申请</a></td>
             </tr>
             </tbody>
 
@@ -175,10 +175,10 @@
             <tbody>
             <tr  >
                 <td  align="center">快速通过</td>
-                <td align="center"><a href="https://j.gcl.one/" target="_blank"  >JS冲</a></td>
+                <td align="center"><a href="https://j.4ms.top/" target="_blank"  >JS冲</a></td>
                 <td align="center"><a href="https://np.snioer.ml/" target="_blank"  >np冲</a></td>
                 <td align="center"><a href="https://np.gcl.one/" target="_blank"  >np冲2</a></td>
-                <td align="center"><a href="https://sp.gcl.one/" target="_blank"  >sp冲</a></td>
+                <td align="center"><a href="https://sp.4ms.top/" target="_blank"  >sp冲</a></td>
             </tr>
             <tbody>
             <tr>
