--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <tr>
                 <td align="center">骨骼网盘</td>
                 <td align="center"><a href="https://gd.4ms.top/" target="_blank" >常用骨骼盘</a></td>
-                <td align="center"><a href="https://gd2.4ms.top/" target="_blank" >骨骼团队盘</a></td>
+                <td align="center"><a href="https://alist.4ms.top/" target="_blank" >ALIST</a></td>
                 <td align="center"><a href="https://gds.4ms.top/" target="_blank">GD Share</a></td>
                 <td align="center"><a href="https://gdi.4ms.top/" target="_blank">GD Index</a></td>
             </tr>
@@ -114,7 +114,7 @@
             <tr >
                 <td   align="center">其他工具</td>
                 <td align="center"><a href="https://txtpad.cn/snioer" target="_blank"  >文本派</a></td>
-                <td align="center"><a href="https://www.itdog.cn/" target="_blank"  >ITDog</a></td>
+                <td align="center"><a href="https://chat.4ms.top/" target="_blank"  >ChatGpt</a></td>
                 <td align="center"><a href="https://v.hi.sy/" target="_blank"  >ALLTUBE</a></td>
                 <td align="center"><a href="https://note.ms/" target="_blank"  >note.ms</a></td>
             </tr>
@@ -166,7 +166,7 @@
             <tbody>
             <tr>
                 <td   align="center">阿里网盘</td>
-                <td align="center"><a href="https://alist.snioer.ml/" target="_blank"  >Alist Heroku</a></td>
+                <td align="center"><a href="https://alist.4ms.top/" target="_blank"  >Alist</a></td>
                 <td align="center"><a href="https://sdc.rua.gay/" target="_blank"  >PanIndex V6</a></td>
                 <td align="center"><a href="https://alist.gcl.one" target="_blank"  >Alist2 Heroku</a></td>
                 <td align="center"><a href="http://www.chapaofan.com/" target="_blank"  >泡饭影视</a></td>
